Fixed some css and layout issues.

--- a/css/default.css
+++ b/css/default.css
@@ -1344,7 +1344,7 @@ input.icon {
     width: 60px;
     height: 60px;
     color: #fff;
-    font-size: 0px;
+    font-size: 0;
     text-align: left;
     cursor: pointer;
     border: none;
@@ -1415,12 +1415,6 @@ input.back {
     width: 60px;
     height: 60px;
     background: url("../images/back.png") no-repeat center;
-}
-
-input.restart {
-    width: 60px;
-    height: 60px;
-    background: url("../images/restart.png") no-repeat center;
 }
 
 input.upload {
@@ -1694,7 +1688,7 @@ option.default {
 div.StedDeplModeValues {
    width: 250px;
    float: left;
-   vertical-align: center;
+   vertical-align: middle;
 }
 
 /* Confidence levels for parameters: provided, asIs, verified,
@@ -1811,7 +1805,7 @@ div.StedDeplModeValues {
 #phpinfo tr {
     border-bottom-style: solid;
     border-bottom-color: #ccc;
-    border-bottom-width: 0.5px;
+    border-bottom-width: 1px;
 }
 
 #phpinfo td {
